# thrift

./: .gitignore  CHANGES.md  LANGUAGES.md  Makefile.am  appveyor.yml  composer.json  configure.ac
.github/: dependabot.yml
.github/workflows/: build.yml  pypi.yml
compiler/cpp/: CMakeLists.txt
compiler/cpp/src/thrift/generate/: t_java_generator.cc  t_php_generator.cc  t_py_generator.cc
compiler/cpp/tests/: CMakeLists.txt
contrib/: Vagrantfile  parse_profiling.py
contrib/async-test/: test-leaf.py
contrib/fb303/: configure.ac
contrib/fb303/py/: setup.py
contrib/fb303/py/fb303/: FacebookBase.py
contrib/fb303/py/fb303_scripts/: fb303_simple_mgmt.py
contrib/thrift-maven-plugin/: pom.xml
contrib/zeromq/: test-client.py  test-server.py
debian/: control  rules
doc/install/: README.md  debian.md
lib/c_glib/test/fuzz/: Makefile.am
lib/cpp/test/fuzz/: Makefile.am
lib/java/: CMakeLists.txt  Makefile.am  build.gradle  gradle.properties  settings.gradle
lib/java/gradle/: codeQualityChecks.gradle  environment.gradle  functionalTests.gradle  generateTestThrift.gradle  publishing.gradle  sourceConfiguration.gradle
lib/java/src/test/resources/: JavaOptionTypeOptionalTest.thrift
lib/kotlin/: build.gradle.kts  gradle.properties
lib/kotlin/cross-test-client/: build.gradle.kts
lib/kotlin/cross-test-server/: build.gradle.kts
lib/php/: README.md  phpunit.xml
lib/php/.phan/: config.php
lib/php/lib/: StoredMessageProtocol.php  TMultiplexedProcessor.php
lib/php/lib/Base/: TBase.php
lib/php/lib/ClassLoader/: ThriftClassLoader.php
lib/php/lib/Exception/: TApplicationException.php  TProtocolException.php  TTransportException.php
lib/php/lib/Factory/: TBinaryProtocolFactory.php  TCompactProtocolFactory.php  TFramedTransportFactory.php  TJSONProtocolFactory.php  TProtocolFactory.php  TStringFuncFactory.php  TTransportFactory.php  TTransportFactoryInterface.php
lib/php/lib/Protocol/: TBinaryProtocol.php  TCompactProtocol.php  TJSONProtocol.php  TMultiplexedProtocol.php  TProtocol.php  TProtocolDecorator.php  TSimpleJSONProtocol.php
lib/php/lib/Protocol/JSON/: BaseContext.php  ListContext.php  LookaheadReader.php  PairContext.php
lib/php/lib/Protocol/SimpleJSON/: CollectionMapKeyException.php  Context.php  ListContext.php  MapContext.php  StructContext.php
lib/php/lib/Serializer/: TBinarySerializer.php
lib/php/lib/Server/: TForkingServer.php  TSSLServerSocket.php  TServer.php  TServerSocket.php  TServerTransport.php  TSimpleServer.php
lib/php/lib/StringFunc/: Core.php  Mbstring.php  TStringFunc.php
lib/php/lib/Transport/: TBufferedTransport.php  TCurlClient.php  TFramedTransport.php  THttpClient.php  TMemoryBuffer.php  TNullTransport.php  TPhpStream.php  TSSLSocket.php  TSocket.php  TSocketPool.php  TTransport.php
lib/php/lib/Type/: TConstant.php  TMessageType.php  TType.php
lib/php/src/ext/thrift_protocol/: php_thrift_protocol.cpp
lib/php/test/: bootstrap.php
lib/php/test/Integration/Lib/ClassLoader/: ThriftClassLoaderTest.php
lib/php/test/Integration/Lib/Protocol/: TJSONProtocolTest.php  TSimpleJSONProtocolTest.php
lib/php/test/Unit/Lib/ClassLoader/: ThriftClassLoaderTest.php
lib/php/test/Unit/Lib/Factory/: TBinaryProtocolFactoryTest.php  TCompactProtocolFactoryTest.php  TFramedTransportFactoryTest.php  TJSONProtocolFactoryTest.php  TStringFuncFactoryTest.php
lib/php/test/Unit/Lib/Protocol/: TBinaryProtocolAcceleratedTest.php  TBinaryProtocolTest.php  TCompactProtocolTest.php  TMultiplexedProtocolTest.php  TProtocolDecoratorTest.php  TSimpleJSONProtocolTest.php
lib/php/test/Unit/Lib/Server/: TSSLServerSocketTest.php  TServerSocketTest.php  TSimpleServerTest.php
lib/php/test/Unit/Lib/StringFunc/: CoreTest.php  MbStringTest.php
lib/php/test/Unit/Lib/Transport/: TBufferedTransportTest.php  TCurlClientTest.php  TFramedTransportTest.php  (+6 more)
lib/py/: MANIFEST.in  Makefile.am  setup.py
lib/py/src/: TTornado.py  Thrift.py
lib/py/src/ext/: protocol.tcc  types.cpp  types.h
lib/py/src/protocol/: TBase.py  TBinaryProtocol.py  TCompactProtocol.py  TJSONProtocol.py  TProtocol.py  TProtocolDecorator.py
lib/py/src/server/: THttpServer.py  TNonblockingServer.py  TServer.py
lib/py/src/thrift/: TMultiplexedProcessor.py  TRecursive.py  TSCons.py  TSerialization.py  TTornado.py  Thrift.py
lib/py/src/thrift/ext/: compact.cpp  compact.h  module.cpp  protocol.tcc  types.h
lib/py/src/thrift/protocol/: TBase.py  TBinaryProtocol.py  TCompactProtocol.py  THeaderProtocol.py  TJSONProtocol.py  TMultiplexedProtocol.py  TProtocol.py  TProtocolDecorator.py
lib/py/src/thrift/server/: THttpServer.py  TNonblockingServer.py  TProcessPoolServer.py  TServer.py
lib/py/src/thrift/transport/: THeaderTransport.py  THttpClient.py  TSSLSocket.py  TSocket.py  TTransport.py  TTwisted.py  TZlibTransport.py  sslcompat.py
lib/py/src/transport/: THeaderTransport.py  THttpClient.py  TSSLSocket.py  TSocket.py  TTransport.py  sslcompat.py
lib/py/test/: .gitignore  test_socket.py  test_sslcontext_hostname.py  test_sslsocket.py  test_type_check.py  thrift_TNonblockingServer.py  thrift_transport.py  type_check_test.thrift
scripts/: monitor_ci.sh
test/: known_failures_Linux.json  rebuild_known_failures.sh  test.py  tests.json
test/crossrunner/: run.py
test/features/: container_limit.py  string_limit.py  theader_binary.py
test/features/local_thrift/: __init__.py
test/php/: Handler.php  Makefile.am  TestClient.php  TestServer.php
test/py/: FastbinaryTest.py  Makefile.am  RunClientServer.py  SerializationTest.py  TSimpleJSONProtocolTest.py  TestClient.py  TestEof.py  TestFrozen.py  TestServer.py  TestSocket.py  TestSyntax.py  TestTypes.py  generate.cmake  util.py
test/py.tornado/: test_suite.py
test/py.twisted/: test_suite.py
test/py/explicit_module/: EnumSerializationTest.py  runtest.sh
test/v0.16/: TypeHintsTest.thrift
tutorial/php/: runserver.py
tutorial/py/: PythonClient.py  PythonServer.py
tutorial/py.tornado/: PythonClient.py  PythonServer.py
tutorial/py.twisted/: PythonClient.py  PythonServer.py  PythonServer.tac
(+129 files in other folders)
